# openarm_lerobot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/: openarm_right.urdf
configs/: AGENTS.md  realsense_3cam_mapping.yaml  record_full.json  record_nocam.json  record_quest_left_nocam.json  record_quest_right_nocam.json  record_rgb.json  record_rgb_head_fixture.json
docs/: 2026-04-14_last_24h_work_summary.md  2026-04-14_openarm_recording_work_report.md  codex_handoff_leader_gc_plan.md  codex_handoff_pi05_plan.md  gpu_server_setup.md  lerobot_openarm_record_command.md  next_steps.md  phase1_architecture.md  quest_isaac_gpu_handoff.md  quest_isaac_real_control_contract.md  quest_phase_d_yaw_only_plan_deferred.md  realsense_rsusb_runbook.md  syhlabtop_handover.md
scripts/: AGENTS.md  analyze_quest_closed_loop_log.py  audit_reference_dataset.py  bootstrap_lerobot_runtime.sh  bootstrap_lerobot_runtime_py312.sh  check_lerobot_recording_compatibility.py  debug_quest_input_only.py  debug_quest_observer.py  debug_quest_timed_capture.py  env_rsusb_py310.sh  env_rsusb_py312.sh  inspect_openarm_isaac_env.py  install_lerobot_runtime_ubuntu22.sh  install_python312_for_lerobot_ubuntu22.sh  rebuild_pyrealsense2_py312.sh  record_quest_closed_loop.py  run_policy_server.sh  run_record.sh  test_quest_ik_roundtrip.py  test_quest_processor_steps.py  test_quest_replay_processor_gate.py  test_quest_timed_capture.py  validate_quest_recording_dry_run.py  validate_quest_spatial_replay.py  validate_unified_camera_semantic_registry.py  validate_unified_data_collection_rollout_gate.py  (+2 more)
(+14 files in other folders)
