[project]
name = "openarm-lerobot"
version = "0.1.0"
description = "OpenArm to LeRobot integration layer"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
quest = ["oculus-reader", "placo"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
